# mcp-code

./: .editorconfig  .gitignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  MPC_CODE_TOOL_GUIDE.md  NOTICE  README.md  debug-files-test.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
docs/: SPEC.md
docs/developments/: TEST_GUIDELINE.md
src/: config.ts  data-parse.ts  diff.ts  directory.ts  error.ts  files.ts  index.ts  logs.ts  main.rs  mpc.ts  safe-edit.ts  schema.ts  script.ts  serch.ts  server.ts  types.ts  util.ts
src/core/: executor.rs  mod.rs  registry.rs  script.ts
src/core/adapters/: api.rs  calculator.rs  file.rs  mod.rs
src/lib/: directory.ts  files.ts  logs.ts  main.ts  search.ts  serch.ts  util.ts
tests/: config.test.ts  data-parse.test.ts  diff.test.ts  directory.test.ts  files.test.ts  index.ts  library.test.ts  logs.test.ts  safe-edit.test.ts  script.test.ts  search.test.ts  test-data.ts  test-fixtures.ts  test-utils.ts  util.test.ts
tests/fixtures/: config-minimal.yaml  config-missing-current-project.yaml  config-multi-project.yaml  config-non-existent-project.yaml  config-valid.yaml  multi-line-text.txt  simple-text.txt  test-script-error.js  test-script-success.js
